ex1/2 folders refactoring

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,37 +1,27 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch",
-            "type": "node",
-            "request": "launch",
-            "program": "${workspaceRoot}/exercicios.ts",
-            "stopOnEntry": false,
-            "args": [],
-            "cwd": "${workspaceRoot}",
-            "preLaunchTask": null,            
-            "runtimeExecutable": null,
-            "runtimeArgs": [
-                "--nolazy"
-            ],
-            "env": {
-                "NODE_ENV": "development"
-            },
-            "externalConsole": false,
-            "sourceMaps": true,
-            "outDir": "${workspaceRoot}/out"
-        },
-        {
-            "name": "Attach",
-            "type": "node",
-            "request": "attach",
-            "port": 5858,
-            "address": "localhost",
-            "restart": false,
-            "sourceMaps": false,
-            "outDir": null,
-            "localRoot": "${workspaceRoot}",
-            "remoteRoot": null
-        }
-    ]
+
+"version": "0.2.0",
+"configurations": [
+  {
+    "type": "node",
+    "request": "launch",
+    "name": "Ex1",
+    "program": "${workspaceRoot}/exercicio1.ts",
+    "outDir": "${workspaceRoot}/out"
+  },
+  {
+    "type": "node",
+    "request": "launch",
+    "name": "Ex2",
+    "program": "${workspaceRoot}/exercicio2.ts",
+    "outDir": "${workspaceRoot}/out"
+  }
+],
+"compounds": [
+  {
+    "name": "Ex1/Ex2",
+    "configurations": ["Ex1", "Ex2"],
+    
+  }
+]
 }
